--- a/src/codes-book.html
+++ b/src/codes-book.html
@@ -18,12 +18,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <title>Головна</title>
+    <title>Кодекси в книгах</title>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header/header.html"></include>
-    <include src="./partials/container/container-index.html"></include>
+    <include src="./partials/container/container-c-b.html"></include>
     <include src="./partials/footer/footer.html"></include>
   </body>
 </html>
