--- a/src/codes-folders.html
+++ b/src/codes-folders.html
@@ -18,12 +18,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <title>Головна</title>
+    <title>Кодекси в теках</title>
   </head>
-  <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/header/header.html"></include>
-    <include src="./partials/container/container-index.html"></include>
-    <include src="./partials/footer/footer.html"></include>
-  </body>
+  <body></body>
 </html>
