--- a/src/order-rules.html
+++ b/src/order-rules.html
@@ -18,12 +18,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <title>Головна</title>
+
+    <title>Порядок замовлення</title>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header/header.html"></include>
-    <include src="./partials/container/container-index.html"></include>
+    <include src="./partials/container/container-o-r.html"></include>
     <include src="./partials/footer/footer.html"></include>
   </body>
 </html>
