Добавив зображення в розмітку

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -26,4 +26,5 @@
     <include src="./partials/container/container-contacts.html"></include>
     <include src="./partials/footer/footer.html"></include>
   </body>
+  <script type="module" src="./index.js"></script>
 </html>
