--- a/src/codes-book.html
+++ b/src/codes-book.html
@@ -26,4 +26,6 @@
     <include src="./partials/container/container-c-b.html"></include>
     <include src="./partials/footer/footer.html"></include>
   </body>
+  <script type="module" src="./index.js"></script>
+  <script type="module" src="./index.js"></script>
 </html>
