--- a/src/order-rules.html
+++ b/src/order-rules.html
@@ -27,4 +27,5 @@
     <include src="./partials/container/container-o-r.html"></include>
     <include src="./partials/footer/footer.html"></include>
   </body>
+  <script type="module" src="./index.js"></script>
 </html>
